# infosiga_py

./: .gitignore  README.md  pyproject.toml
src/infosiga_py/: __init__.py  infosiga_sinistros.py  infosiga_veiculos.py  infosiga_vitimas.py  load.py
src/infosiga_py/data-raw/: tb_municipio.csv
